--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="fa" dir="rtl">
+<html lang="fa" dir="rtl" class="h-full">
 <head>
   <meta charset="utf-8">
   <title>DailyReport</title>
