setting default app title

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="fa" dir="rtl" class="h-full">
   <head>
     <meta charset="utf-8" />
-    <title>DailyReport</title>
+    <title>گزارش روزانه</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
